Restructuring Papers API
